--- a/GradientProgressView/Base.lproj/Main.storyboard
+++ b/GradientProgressView/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +13,40 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GradientProgressView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GTv-UW-ps7" customClass="GradientProgressView" customModule="GradientProgressView" customModuleProvider="target">
+                                <rect key="frame" x="57" y="433" width="300" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.73725490199999999" blue="0.19215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="VH9-tq-YoP"/>
+                                    <constraint firstAttribute="width" constant="300" id="bUn-fE-k7i"/>
+                                </constraints>
+                            </view>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kyk-lH-GI5">
+                                <rect key="frame" x="55" y="137" width="304" height="31"/>
+                                <connections>
+                                    <action selector="sliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="nE6-6e-fSO"/>
+                                </connections>
+                            </slider>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kyk-lH-GI5" firstAttribute="leading" secondItem="GTv-UW-ps7" secondAttribute="leading" id="G0d-OD-y91"/>
+                            <constraint firstItem="kyk-lH-GI5" firstAttribute="trailing" secondItem="GTv-UW-ps7" secondAttribute="trailing" id="Gml-10-muN"/>
+                            <constraint firstItem="kyk-lH-GI5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="93" id="OAe-Gq-5Va"/>
+                            <constraint firstItem="GTv-UW-ps7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="dTa-fg-1cK"/>
+                            <constraint firstItem="GTv-UW-ps7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lpC-UC-fOe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="gradientProgressbar" destination="GTv-UW-ps7" id="bMZ-Jt-0FJ"/>
+                        <outlet property="slider" destination="kyk-lH-GI5" id="IPa-GU-I0t"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
